--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -2,7 +2,7 @@ welcome=Thank you!
 required=is required
 notFound=has not been found
 duplicate=is already in use
-nonNumeric=must be all numeric
+nonNumeric=must be all numerics
 duplicateFormSubmission=Duplicate form submission is not allowed
 typeMismatch.date=invalid date
 typeMismatch.birthDate=invalid date
